style.css
:root {
    --white: #f8f8f2;
    --dark: #282a36;
    --purple: #bd93f9;
    --lightgray: rgb(240,240,240);
}

*, *::after, *::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,sans-serif;
}

.container-nav {
    float: left;
    height: 100vh;
}

nav {
    width: 60px;
    height: 60px;
    background: var(--lightgray);
    overflow: hidden;
    transition: 250ms ease-in-out;
}

.nav-showing {
    width: 300px;
    height: 100vh;
}

.menu-logo {
    text-align: center;
    font-size: 25px;
    padding: 20px;
}

ul {
    list-style: none;
    width: 300px;
    opacity: 0;
    transition: 150ms ease-in-out;
}

@media only screen and (max-width: 600px) {
    .nav-showing, ul {
      width: 100vw;
    }
  }

ul li a {
    text-decoration: none;
    color: #000;
    display: flex;
    padding: 20px 20px;
    position: relative;
}

ul li a::after {
    content: "";
    bottom: 5px;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    background: #000;
    width: 0px;
    height: 2px;
    border-radius: 5px;
    transition: 250ms ease-in-out;
    opacity: .3;
}

ul li a:hover::after {
    width: 200px;
}

.ul-showing {
    opacity: 1;
}

.menu-toggle {
    height: 40px;
    width: 40px;
    border: 0;
    margin: 10px;
    position: relative;
    cursor: pointer;
    outline: none;
    background: none;
}

.menu-icon {
    position: absolute;
    top: 50%;
    left: 0;
    transform: translateY(-50%);
    width: 40px;
    height: 3px;
    border-radius: 10px;
    background: #000;
    transition: 150ms ease-in-out;
}

.menu-icon::after {
    content: "";
    position: absolute;
    top: -10px;
    left: 0;
    width: 40px;
    height: 3px;
    border-radius: 10px;
    background: #000;
}

.menu-icon::before {
    content: "";
    position: absolute;
    top: 10px;
    left: 0;
    width: 40px;
    height: 3px;
    border-radius: 10px;
    background: #000;
}

.menu-icon-opened {
    width: 0px;
}
.menu-icon-opened::after {
    top: 50%;
    left: 50%;
    transform: rotate(45deg);
    transition: 150ms ease-in-out;
}

.menu-icon-opened::before {
    top: 50%;
    left: 50%;
    transform: rotate(-45deg);
    transition: 150ms ease-in-out;
}

footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    margin: 1em auto;
    text-align: center;
    font-size: 0.8em;
}

.main-content {
    padding: 20px;
    margin: 0 20px 0 80px;
}

#devices {
    width: inherit;
}

.device {
    display: flex;
    flex-direction: row;
}

#neofetch {
    padding: 2em 0;
    width: inherit;
    display: flex;
    flex-direction: column;
    margin: auto auto auto 1em;
}

#neofetch > feature {
    font-size: 1.2em;
}

#neofetch > spec {
    margin-bottom: 1em;
}

#davinci > img {
    height: 30vw;
    width: auto;
    margin: auto 1em auto auto;
}

